# BettaFish-LG

./: .env.example  .gitignore  NOTICE.md  README.md  pyproject.toml
agents/devil_advocate/: graph.py
agents/insight/: graph.py
agents/media/: graph.py
agents/query/: graph.py
agents/report/: graph.py
docs/: sample_report.md  sample_report_with_devil.md  sample_report_with_evolution.md
graph/: main_graph.py  state.py  supervisor.py
memory/: sqlite_memory.py
scripts/: run.py
tools/: llm.py  search.py
